--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-todos",
+  "name": "baniyagiri",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,13 +7,21 @@
     "start": "node server"
   },
   "keywords": [],
-  "author": "Michael Cheng <cheng.c.mike@gmail.com> (http://michaelcheng.io)",
+  "author": "Saima Khan",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.1",
     "express": "^4.13.4",
+    "file-loader": "^0.11.1",
+    "loadash": "0.0.1",
     "lodash": "^4.2.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^0.14.7",
+    "react-native-web": "0.0.94",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
